<resources>
    <string name="app_name">WALLPAPER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Amazing Wallpaper in your way</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_category">Categorys</string>
    <string name="menu_gif">GIFs</string>
    <string name="menu_favorite">My Favorites</string>
    <string name="menu_moreapp">More App</string>
    <string name="menu_about">About Us</string>
    <string name="menu_seting">Setting</string>
    <string name="menu_privacy_police">Privacy Police</string>
    <string name="menu_rate">Rate App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
