<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/cat"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_gifs"
            android:icon="@drawable/gif"
            android:title="@string/menu_gif" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/fav"
            
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/rated"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/nav_moreapp"
            android:icon="@drawable/about"
            android:title="@string/menu_moreapp" />
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/about"
            android:title="@string/menu_seting" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/privacy"
            android:title="@string/menu_privacy_police" />


</menu>
